--- a/src/style/index.css
+++ b/src/style/index.css
@@ -1,6 +1,99 @@
-* {
-    margin: 0;
-    padding: 0;
+.boxStyle {
+    width: 15em;
+    height: 2em;
+    font-size: 1em;
+    padding: 4px 0 4px 15px;
+    margin: 2px;
+    margin-left: 7px;
+}
+
+.boxStyle:hover {
+    background-color: #f6f6f7;
+    cursor: pointer;
+}
+.leftBox {
+    background-color: #ffffff;
+    height: 52em;
+    width: 19.5em;
+    border-right: 1px lightgray solid;
+}
+.imageBox {
+    user-select: none;
+    transition: all 0.8s ease-in-out;
+    height: 12em;
+}
+.middle {
+    top: 0%;
+    left: 25%;
+    width: 50%;
+    z-index: 33;
+}
+.right {
+    top: 9%;
+    right: 0%;
+    width: 50%;
+    z-index: 22;
+    height: 82%;
+}
+.left {
+    top: 9%;
+    left: 0%;
+    width: 50%;
+    z-index: 22;
+    height: 82%;
+}
+.hide {
+    top: 9%;
+    left: 15%;
+    width: 50%;
+    z-index: 11;
+    height: 82%;
+}
+.leftIcon {
+    color: white;
+    font-size: 2em;
+    cursor: pointer;
+}
+.rightIcon {
+    color: white;
+    font-size: 2em;
+    cursor: pointer;
+}
+.leftCircle {
+    position: absolute;
+    top: 40%;
+    left: 0.3em;
+    background-color: rgba(0, 0, 0, 0.2);
+    z-index: 100;
+}
+.rightCircle {
+    position: absolute;
+    top: 40%;
+    right: 0.3em;
+    background-color: rgba(0, 0, 0, 0.2);
+    z-index: 100;
+}
+.pointIcon {
+    bottom: -1em;
+    height: 15px;
+    left: 40%;
+    position: absolute;
+    width: 200px;
+    z-index: 100;
+}
+.points {
+    display: inline-block;
+    width: 10px;
+    height: 10px;
+    background-color: #e5e5e5;
+    margin-left: 10px;
+}
+.p1 {
+    display: inline-block;
+    width: 10px;
+    height: 10px;
+    background-color: #2b6cb0;
+    margin-left: 10px;
 }
 .boxStyle {
     width: 15em;
@@ -103,4 +196,99 @@
     width: 100%;
     height: 100%;
     padding: 0;
+}
+.SingerBigBox {
+    height: 48em;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    padding-bottom: 4em;
+}
+.SingerBigBox::-webkit-scrollbar {
+    height: 49.5em;
+    width: 5px;
+}
+.SingerBigBox::-webkit-scrollbar-thumb {
+    width: 50px;
+    border-radius: 10px;
+    background: #e0e0e0;
+}
+body {
+    overflow: hidden;
+}
+.transparentLine {
+    width: 2px;
+    height: 15px;
+    background-color: #f2f2f2;
+    margin: 3px 15px;
+}
+.singerClassify {
+    height: 20px;
+    width: 55px;
+    font-size: small;
+}
+.singerAlphabet {
+    height: 20px;
+    width: 35px;
+    font-size: small;
+}
+.singerAll {
+    color: #4791eb;
+    height: 20px;
+    margin-left: 20px;
+    width: 35px;
+    font-size: small;
+}
+.singerP {
+    height: 20px;
+    width: 35px;
+    font-size: small;
+    margin-left: 113px;
+}
+.singerName {
+    font-size: small;
+    margin-left: 20px;
+}
+.recommendationLink {
+    margin: 10px 20px;
+}
+.recommendationLink:focus {
+    color: #2b6cb0;
+}
+.singerHotFiftySongs {
+    background-color: skyblue;
+    /* position: absolute;
+    top: -140px; */
+    width: 100%;
+    overflow-y: scroll;
+    z-index: 100;
+}
+.singerCollectButton {
+    border: 1px #dcdcdc solid;
+    width: 85px;
+    border-radius: 25px;
+    display: flex;
+    padding: 0 8px;
+    margin: 10px 0;
+}
+.singerPlayCircle {
+    font-size: 1.3em;
+    margin-top: 0.1em;
+    color: gray;
+    cursor: pointer;
+}
+.singerTransparentLine {
+    width: 2px;
+    height: 1em;
+    background-color: lightgray;
+    margin: 5px 5px 5px 10px;
+}
+.topFiftySong {
+    position: relative;
+    height: 30px;
+    padding: 4px 10px;
+}
+.heartIcon{
+    margin: 4px 10px 4px 5px;
+    color: gray;
+    cursor: pointer;
 }
