--- a/src/style/index.css
+++ b/src/style/index.css
@@ -2,6 +2,16 @@
     margin: 0;
     padding: 0;
 }
+
+body {
+    overflow: hidden;
+}
+
+.recommendationLink {
+    margin: 10px 20px;
+}
+
+
 .boxStyle {
     width: 15em;
     height: 2em;
@@ -15,23 +25,27 @@
     background-color: #f6f6f7;
     cursor: pointer;
 }
+
 .leftBox {
     background-color: #ffffff;
     height: 52em;
     width: 19.5em;
     border-right: 1px lightgray solid;
 }
+
 .imageBox {
     user-select: none;
     transition: all 0.8s ease-in-out;
     height: 12em;
 }
+
 .middle {
     top: 0%;
     left: 25%;
     width: 50%;
     z-index: 33;
 }
+
 .right {
     top: 9%;
     right: 0%;
@@ -39,6 +53,7 @@
     z-index: 22;
     height: 82%;
 }
+
 .left {
     top: 9%;
     left: 0%;
@@ -46,6 +61,7 @@
     z-index: 22;
     height: 82%;
 }
+
 .hide {
     top: 9%;
     left: 15%;
@@ -53,16 +69,19 @@
     z-index: 11;
     height: 82%;
 }
+
 .leftIcon {
     color: white;
     font-size: 2em;
     cursor: pointer;
 }
+
 .rightIcon {
     color: white;
     font-size: 2em;
     cursor: pointer;
 }
+
 .leftCircle {
     position: absolute;
     top: 40%;
@@ -70,6 +89,7 @@
     background-color: rgba(0, 0, 0, 0.2);
     z-index: 100;
 }
+
 .rightCircle {
     position: absolute;
     top: 40%;
@@ -77,6 +97,7 @@
     background-color: rgba(0, 0, 0, 0.2);
     z-index: 100;
 }
+
 .pointIcon {
     bottom: -1em;
     height: 15px;
@@ -85,6 +106,7 @@
     width: 200px;
     z-index: 100;
 }
+
 .points {
     display: inline-block;
     width: 10px;
@@ -92,6 +114,7 @@
     background-color: #e5e5e5;
     margin-left: 10px;
 }
+
 .p1 {
     display: inline-block;
     width: 10px;
@@ -99,6 +122,7 @@
     background-color: #2b6cb0;
     margin-left: 10px;
 }
+
 .tabPage {
     width: 100%;
     height: 100%;
