--- a/src/style/index.css
+++ b/src/style/index.css
@@ -1,4 +1,4 @@
-s.boxStyle {
+.boxStyle {
     width: 15em;
     height: 2em;
     font-size: 1em;
@@ -21,79 +21,6 @@ s.boxStyle {
     user-select: none;
     transition: all 0.8s ease-in-out;
     height: 12em;
-}
-.middle {
-    top: 0%;
-    left: 25%;
-    width: 50%;
-    z-index: 33;
-}
-.right {
-    top: 9%;
-    right: 0%;
-    width: 50%;
-    z-index: 22;
-    height: 82%;
-}
-.left {
-    top: 9%;
-    left: 0%;
-    width: 50%;
-    z-index: 22;
-    height: 82%;
-}
-.hide {
-    top: 9%;
-    left: 15%;
-    width: 50%;
-    z-index: 11;
-    height: 82%;
-}
-.leftIcon {
-    color: white;
-    font-size: 2em;
-    cursor: pointer;
-}
-.rightIcon {
-    color: white;
-    font-size: 2em;
-    cursor: pointer;
-}
-.leftCircle {
-    position: absolute;
-    top: 40%;
-    left: 0.3em;
-    background-color: rgba(0, 0, 0, 0.2);
-    z-index: 100;
-}
-.rightCircle {
-    position: absolute;
-    top: 40%;
-    right: 0.3em;
-    background-color: rgba(0, 0, 0, 0.2);
-    z-index: 100;
-}
-.pointIcon {
-    bottom: -1em;
-    height: 15px;
-    left: 40%;
-    position: absolute;
-    width: 200px;
-    z-index: 100;
-}
-.points {
-    display: inline-block;
-    width: 10px;
-    height: 10px;
-    background-color: #e5e5e5;
-    margin-left: 10px;
-}
-.p1 {
-    display: inline-block;
-    width: 10px;
-    height: 10px;
-    background-color: #2b6cb0;
-    margin-left: 10px;
 }
 
 body {
@@ -140,7 +67,7 @@ body {
 
 .right {
     top: 9%;
-    right: 0%;
+    left: 50%;
     width: 50%;
     z-index: 22;
     height: 82%;
