--- a/src/style/main.css
+++ b/src/style/main.css
@@ -21,3 +21,14 @@
     width: 12.5em;
     cursor: pointer;
 }
+
+.logout:hover ~ .show {
+    opacity: 1;
+    transition: all 0.3s;
+}
+
+.pictureTwo:hover ~ .circleTwo {
+    opacity: 1;
+    transform: translate(0, -5px);
+    transition: all 0.5s;
+}
