--- a/src/style/index.css
+++ b/src/style/index.css
@@ -260,7 +260,6 @@ body {
     padding-bottom: 180px;
     position: relative;
     right: 0;
-    width: 25em;
     overflow-y: scroll;
     overflow-x: hidden;
     white-space: pre-wrap;
@@ -280,4 +279,12 @@ body {
     width: 480px;
     text-align: center;
     transition: all 0ms;
+}
+@font-face {
+    font-family: "myFont";
+    src: url(../font/HarmonyOS_Sans_SC_Regular.ttf);
+}
+
+* {
+    font-family: "myFont";
 }
